css/main.css
/* ... */
/* Small devices (portrait tablets and large phones, 600px and up) */
@media only screen and (min-width: 600px) and (max-width: 1200px) {
	img.slides_show_img {
		width: 90%;
		display: block;
		margin-left: auto;
		margin-right: auto;
	}
	.d-img {
	   	padding-left: 10%;
	   	padding-right: 10%;
    }
       .drama-slideshow {
		box-sizing:border-box;
	 	max-width: 800px;
	 	position: relative;
	 	margin: auto;
	}
   	.mySlides {
  		display: none;
	}
	.mySlides img {
		vertical-align: middle;
	}
	.d-prev, .d-next {
	  cursor: pointer;
	  position: absolute;
	  top: 50%;
	  width: auto;
	  margin-top: -22px;
	  padding: 16px;
	  color: #0A1241;
	  font-weight: bold;
	  font-size: 18px;
	  transition: 0.6s ease;
	  border-radius: 0 3px 3px 0;
	  user-select: none;
	}
	.d-next {
	  right: 0;
	  border-radius: 3px 0 0 3px;
	}
	.d-prev:hover, .d-next:hover {
	  background-color: rgba(0,0,0,0.8);
	}
	.s-dot {
	  cursor: pointer;
	  height: 15px;
	  width: 15px;
	  margin: 0 2px;
	  background-color: #bbb;
	  border-radius: 50%;
	  display: inline-block;
	  transition: background-color 0.6s ease;
	}
	.s-dot:hover {
	  background-color: #717171;
	}
}

/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {
	.club_row {
		flex-direction: row;
		align-items: flex-start;
	}
}

@media (max-width: 575.98px) {
	.table-responsive-sm {
		overflow-x: auto;
		-webkit-overflow-scrolling: touch;
	}
	img.club_img {
		width: 90%;
		margin: 0 5%;	
	}
	.club_info {
		width: 95%;
		margin-top: 30px;
	}
	.seperate {
		width: 95%;
		max-width: 95%;
	}
	.club_header {
		flex-direction: column;
		margin: 20px 0;
		height: 290px;
	}	
	.orchestra {
		margin: 0;
		padding: 0;
		list-style-type: none;
		background: #CCCCCC;
		margin: 0;
		border-radius: 1em;
		padding: 2em;
		margin-top: 2em;
		margin-bottom: 2em;
		text-align: center;
	}
	.orch-head {
		font-size: 2rem;
		color: #000000;
		line-height: 1.2;
		text-decoration: underline;
		text-decoration-color: #A7501F;
		text-align: center;
	}
	.orch-grade {
		font-size: 1.3rem;
		color: #A7501F;
		line-height: 1.2;
		text-align: center;
	}
	.orch-p {
		font-size: 0.875rem;
		color: #000000;
		line-height: 1.2;
		text-align: center;
	}
	.link-register {
		color: #A7501F;
	}
}
@media (max-width: 767.98px) {
	img.main_sm_links {
		width: 27px;
	}
	.table-responsive-md {
		overflow-x: auto;
		-webkit-overflow-scrolling: touch;
	}
	.orchestra {
		margin: 0;
		padding: 0;
		list-style-type: none;
		background: #CCCCCC;
		margin: 0;
		border-radius: 1em;
		padding: 2em;
		margin-top: 2em;
		margin-bottom: 2em;
		text-align: center;
	}
	button.faq-btn {
		border: none;
		background: transparent;
	}
	.orch-head {
		font-size: 2rem;
		color: #000000;
		line-height: 1.2;
		text-decoration: underline;
		text-decoration-color: #A7501F;
		text-align: center;
	}
	.orch-grade {
		font-size: 1.3rem;
		color: #A7501F;
		line-height: 1.2;
		text-align: center;
	}
	.orch-p {
		font-size: 0.875rem;
		color: #000000;
		line-height: 1.2;
	}
	.link-register {
		color: #A7501F;
		text-align: center;
	}
}
@media (max-width: 991.98px) {
	#mainNav ul ul{
		padding: 1% 2%;
	}
	button.web_button{
		float: right;
	}
	.search_bar {
		padding: 2% 3%;
		width: 75%;
		margin-top: 5%;
		border-radius: 56px;
		border: none;
	}
	.table-responsive-lg {
		overflow-x: auto;
		-webkit-overflow-scrolling: touch;
	}
	.orchestra {
		margin: 0;
		padding: 0;
		list-style-type: none;
		background: #CCCCCC;
		margin: 0;
		border-radius: 1em;
		padding: 2em;
		margin-top: 2em;
		margin-bottom: 2em;
		text-align: center;
	}
	.orch-head {
		font-size: 2rem;
		color: #000000;
		line-height: 1.2;
		text-decoration: underline;
		text-decoration-color: #A7501F;
		text-align: center;
	}
	.orch-grade {
		font-size: 1.3rem;
		color: #A7501F;
		line-height: 1.2;
		text-align: center;
	}
	.orch-p {
		font-size: 0.875rem;
		color: #000000;
		line-height: 1.2;
		text-align: center;
	}
	.link-register {
		color: #A7501F;
	}
	#people {
		justify-content: center;
	}
}

/* For super small devices (320px and lower)*/
@media only screen and (max-width: 320px) {
	header {
		margin-top: 40px;
	}
	header.masthead .masthead-subheading {
		margin-bottom: 10px;
	}
	.search_bar {
		width: 95%;
	}
	.large-search-icon {
		position: relative;
		font-size: 1em;
		float: right;
		top: -26px;
		right: 20px;
	}
	.page-section h3.section-subheading, 
	.page-section .section-subheading.h3 {
		margin-bottom: -1rem;
	}
	img.slide-img {
		width: 100px;
		margin: 10px;
	}
	.slide-link h5 {
		margin-top: -45px;
	}
}

@media (max-width: 399px) {
	#clubs_title {
		margin-top: 80px;
		margin-bottom: 20px;
	}
}

